--- a/slides/overview.html
+++ b/slides/overview.html
@@ -35,7 +35,7 @@ These slides were created by [Trevor Lazarus](http://trevorlazar.us/sem-enc) whi
 * RDF Data Model
   * The data model in RDF is a **graph data model**
   * An edge with two connecting nodes forms a **triple**
-  .left[![Right-aligned image](https://objectcomputing.com/files/7214/3777/2560/triples.gif)]
+  *  .right[![Right-aligned image](https://objectcomputing.com/files/7214/3777/2560/triples.gif)]
 
 ---
 ## Resource Description Framework
@@ -77,9 +77,9 @@ Shakespeare’s Works
    * Headword list with some annotations
   * About the Editor and Contributors
 ---
-
-## Dissecting an Entry
-.left[![Right-aligned image](https://github.com/trevorlazarus/semantic-encyclopedias/raw/master/slides/annotated_a.png)]
+#### Dissecting an Entry
+<img src="https://github.com/trevorlazarus/semantic-encyclopedias/raw/master/slides/annotated_a.png" width="700" height="600" />
+<!-- .left[![Right-aligned image]()] -->
 ---
 
 ## From formatted Word/PDF to RDF
