--- a/slides/overview.html
+++ b/slides/overview.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>Trevor's Slides</title>
     <meta charset="utf-8">
     <style>
       @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
@@ -132,7 +132,7 @@ Shakespeare’s Works
 
   * <a href="https://invis.io/WXFNVY3BPV7#/277185664_Home" target="_blank">Link to Design</a>
 
-  * <a href="https://encyclopedia.1914-1918-online.net/" target="_blank">Link to Rerefence Website</a> 
+  * <a href="https://encyclopedia.1914-1918-online.net/" target="_blank">Link to Rerefence Website</a>
 ---
 <iframe src="https://invis.io/WXFNVY3BPV7#/277185664_Home"width="800" height="700"><iframe>
 
